# SDLTest

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  SDLTest.cpp  SDLTest.komodoproject  SDLTestapp  a.out  notes.txt
.travis/: before_install.sh
src/: SDLTest.cpp  Ship.cpp  Ship.h  Timer.cpp  Timer.h  res_path.h
